@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  aqualung-9999.ebuild:
+  Define autotools variables before inherit.
+  Reorded inherits (alphabetically).
+  Correct SVN repository URI.
+  Correct homepage.
+
   04 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   aqualung-9999.ebuild:
   Remove versioned dependency on libcdio, issue fixed upstream
